# xdesktopv3

./: CMakeLists.txt  CMakePresets.json  README.md  build_win.bat  package  version.inc
src/: CMakeLists.txt  PrusaSlicer_app_msvc.cpp  XDesktop.cpp  XDesktop_app_msvc.cpp
src/hints/: HintsToPot.cpp
src/libslic3r/: AABBMesh.cpp  AABBTreeIndirect.hpp  AABBTreeLines.hpp  AStar.hpp  AnyPtr.hpp  AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  BlacklistedLibraryCheck.cpp  BlacklistedLibraryCheck.hpp  BoostAdapter.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  Brim.hpp  BuildVolume.cpp  BuildVolume.hpp  CMakeLists.txt  Calib.cpp  Calib.hpp  Channel.hpp  ClipperUtils.cpp  ClipperUtils.hpp  ClipperZUtils.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  CutSurface.cpp  CutSurface.hpp  CutUtils.cpp  CutUtils.hpp  EdgeGrid.cpp  EdgeGrid.hpp  ElephantFootCompensation.cpp  (+172 more)
src/libslic3r/Algorithm/: PathSorting.hpp  RegionExpansion.cpp  RegionExpansion.hpp
src/libslic3r/Arrange/: Arrange.hpp  ArrangeImpl.hpp  ArrangeSettingsDb_AppCfg.cpp  ArrangeSettingsDb_AppCfg.hpp  ArrangeSettingsView.hpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp  SegmentedRectangleBed.hpp
src/libslic3r/BranchingTree/: BranchingTree.cpp  BranchingTree.hpp  PointCloud.cpp  PointCloud.hpp
src/libslic3r/CSGMesh/: CSGMesh.hpp  CSGMeshCopy.hpp  ModelToCSGMesh.hpp  PerformCSGMeshBooleans.hpp  SliceCSGMesh.hpp  TriangleMeshAdapter.hpp  VoxelizeCSGMesh.hpp
src/libslic3r/Execution/: Execution.hpp  ExecutionTBB.hpp
src/libslic3r/Fill/: Fill.cpp  Fill.hpp  Fill3DHoneycomb.cpp  Fill3DHoneycomb.hpp  FillAdaptive.cpp  FillAdaptive.hpp  FillBase.cpp  FillBase.hpp  FillConcentric.cpp  FillConcentric.hpp  FillEnsuring.cpp  FillEnsuring.hpp  FillGyroid.cpp  FillGyroid.hpp  FillHoneycomb.cpp  FillHoneycomb.hpp  FillLightning.cpp  FillLightning.hpp  FillLine.cpp  FillLine.hpp  FillPlanePath.cpp  FillPlanePath.hpp  FillRectilinear.cpp  FillRectilinear.hpp
src/libslic3r/Format/: 3mf.cpp  3mf.hpp  AMF.cpp  AMF.hpp  AnycubicSLA.cpp  AnycubicSLA.hpp  OBJ.cpp  OBJ.hpp  SL1.hpp  SL1_SVG.hpp  SLAArchiveFormatRegistry.cpp  SLAArchiveFormatRegistry.hpp  SLAArchiveReader.cpp  SLAArchiveReader.hpp  SLAArchiveWriter.cpp  SLAArchiveWriter.hpp  STEP.cpp  STEP.hpp  STL.cpp  STL.hpp  SVG.cpp  SVG.hpp  ZaxeArchive.cpp  ZaxeArchive.hpp  ZipperArchiveImport.cpp  objparser.hpp
src/libslic3r/GCode/: AvoidCrossingPerimeters.cpp  AvoidCrossingPerimeters.hpp  ConflictChecker.cpp  ConflictChecker.hpp  CoolingBuffer.cpp  CoolingBuffer.hpp  ExtrusionProcessor.hpp  FindReplace.cpp  FindReplace.hpp  GCodeProcessor.cpp  GCodeProcessor.hpp  GCodeWriter.cpp  GCodeWriter.hpp  LabelObjects.cpp  PostProcessor.cpp  PostProcessor.hpp  PressureEqualizer.cpp  PressureEqualizer.hpp  PrintExtents.cpp  PrintExtents.hpp  RetractWhenCrossingPerimeters.cpp  RetractWhenCrossingPerimeters.hpp  SeamPlacer.cpp  SeamPlacer.hpp  SpiralVase.cpp  SpiralVase.hpp  ThumbnailData.cpp  ThumbnailData.hpp  Thumbnails.cpp  Thumbnails.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTowerIntegration.cpp
src/libslic3r/Geometry/: Bicubic.hpp  Circle.cpp  Circle.hpp  ConvexHull.cpp  ConvexHull.hpp  Curves.hpp  MedialAxis.cpp  MedialAxis.hpp  Voronoi.hpp  VoronoiOffset.cpp  VoronoiOffset.hpp  VoronoiUtilsCgal.cpp  VoronoiUtilsCgal.hpp  VoronoiVisualUtils.hpp
src/libslic3r/Optimize/: BruteforceOptimizer.hpp  NLoptOptimizer.hpp
src/libslic3r/SLA/: AGGRaster.hpp  BranchingTreeSLA.cpp  BranchingTreeSLA.hpp  Clustering.cpp  Clustering.hpp  ConcaveHull.cpp  ConcaveHull.hpp  DefaultSupportTree.cpp  DefaultSupportTree.hpp  Hollowing.cpp  Hollowing.hpp  JobController.hpp  Pad.cpp  Pad.hpp  RasterBase.cpp  RasterBase.hpp  RasterToPolygons.cpp  RasterToPolygons.hpp  ReprojectPointsOnMesh.hpp  Rotfinder.cpp  Rotfinder.hpp  SpatIndex.cpp  SpatIndex.hpp  SupportPoint.hpp  SupportPointGenerator.cpp  SupportPointGenerator.hpp  SupportTree.cpp  SupportTree.hpp  SupportTreeBuilder.cpp  SupportTreeBuilder.hpp  SupportTreeMesher.cpp  SupportTreeMesher.hpp  SupportTreeStrategies.hpp  SupportTreeUtils.hpp  SupportTreeUtilsLegacy.hpp
src/libslic3r/Support/: OrganicSupport.cpp  OrganicSupport.hpp  SupportCommon.cpp  SupportCommon.hpp  SupportDebug.cpp  SupportDebug.hpp  SupportLayer.hpp  SupportMaterial.cpp  SupportMaterial.hpp  SupportParameters.cpp  SupportParameters.hpp  TreeModelVolumes.cpp  TreeModelVolumes.hpp  TreeSupport.cpp  TreeSupport.hpp  TreeSupportCommon.cpp  TreeSupportCommon.hpp
src/platform/msw/: XDesktop-gcodeviewer.rc.in  XDesktop.rc.in
src/platform/osx/: Info.plist.in
src/platform/unix/: PrusaGcodeviewer.desktop  PrusaSlicer.desktop
src/qoi/: CMakeLists.txt  README.md  qoilib.c
src/slic3r/: CMakeLists.txt  pchheader.hpp
src/slic3r/Config/: Snapshot.cpp  Snapshot.hpp  Version.cpp  Version.hpp
src/slic3r/GUI/: 2DBed.cpp  2DBed.hpp  3DBed.cpp  3DBed.hpp  3DScene.cpp  3DScene.hpp  AboutDialog.cpp  AboutDialog.hpp  ArrangeSettingsDialogImgui.cpp  ArrangeSettingsDialogImgui.hpp  BackgroundSlicingProcess.cpp  BackgroundSlicingProcess.hpp  BedShapeDialog.cpp  BedShapeDialog.hpp  BitmapCache.cpp  BitmapCache.hpp  BitmapComboBox.hpp  BonjourDialog.cpp  BonjourDialog.hpp  ButtonsDescription.cpp  ButtonsDescription.hpp  Camera.cpp  Camera.hpp  CameraUtils.cpp  CameraUtils.hpp  ConfigExceptions.hpp  ConfigManipulation.cpp  ConfigManipulation.hpp  ConfigSnapshotDialog.cpp  ConfigSnapshotDialog.hpp  ConfigWizard.cpp  ConfigWizard.hpp  ConfigWizard_private.hpp  CoordAxes.hpp  CustomIPDialog.cpp  CustomIPDialog.hpp  DesktopIntegrationDialog.cpp  DesktopIntegrationDialog.hpp  Device.cpp  Device.hpp  (+135 more)
src/slic3r/Utils/: ASCIIFolding.cpp  ASCIIFolding.hpp  AppUpdater.cpp  AppUpdater.hpp  AstroBox.cpp  AstroBox.hpp  Bonjour.cpp  Bonjour.hpp  BroadcastReceiver.cpp  Duet.cpp  Duet.hpp  EmbossStyleManager.cpp  EmbossStyleManager.hpp  FixModelByWin10.cpp  FixModelByWin10.hpp  FlashAir.cpp  FlashAir.hpp  FontConfigHelp.cpp  FontConfigHelp.hpp  HexFile.cpp  HexFile.hpp  Http.cpp  (+31 more)
src/tcbspan/: README.md
(+160 files in other folders)
